# requests-schannel

./: .gitignore  README.md  demo.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml  test.yml
src/requests_schannel/: __init__.py  _cert_store.py  _constants.py  _errors.py  _schannel.py  _windows_types.py  adapter.py  adapters.py  async_socket.py  backend.py  context.py  exceptions.py  httpx_transport.py  socket.py  ws.py
src/requests_schannel/backends/: __init__.py  ctypes_backend.py  sspilib_backend.py
tests/: conftest.py  test_adapter.py  test_cert_store.py
tests/compat/: test_async_concurrency.py  test_concurrency.py  test_httpx_async.py  test_large_files.py  test_requests_mtls.py  test_requests_session.py  test_urllib3_direct.py  test_websockets.py  test_websockets_async.py
tests/integration/: test_alpn.py  test_async_tls.py  test_cert_store_operations.py  test_large_download.py  test_mtls.py  test_public_servers.py  test_server_verification.py  test_tls_handshake.py
tests/manual/: SMARTCARD_TESTING.md  test_smartcard.py
tests/unit/: test_adapters.py  test_async_socket.py  test_backend_abc.py  test_buffer_management.py  test_cert_store.py  test_constants.py  test_errors.py  test_handshake_state.py  test_httpx_transport.py  test_large_file_handling.py  test_schannel_context.py  test_schannel_socket.py  test_ws.py
