[project]
name = "requests-schannel"
version = "0.1.4"
description = "Windows SChannel TLS/mTLS provider for requests and websockets — smartcard and PKI authentication via native Windows APIs"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = [
    "schannel",
    "sspi",
    "tls",
    "mtls",
    "pki",
    "smartcard",
    "windows",
    "requests",
    "websockets",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security :: Cryptography",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Networking",
]
dependencies = []

[project.optional-dependencies]
sspilib = ["sspilib>=0.1.0"]
requests = ["requests>=2.31"]
websockets = ["websockets>=13.0"]
all = ["requests-schannel[sspilib,requests,websockets]"]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.2",
    "pytest-mock>=3.14",
    "cryptography>=43.0",
    "requests>=2.31",
    "websockets>=13.0",
]
lint = ["ruff>=0.8", "mypy>=1.13", "types-requests>=2.32.4.20260107"]
dev = ["requests-schannel[test,lint]", "build>=1.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/requests_schannel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["--strict-markers", "--tb=short"]
markers = [
    "unit: Unit tests with mocks",
    "integration: Integration tests requiring Windows and certs",
    "compat: Compatibility tests with requests/websockets",
    "network: Tests requiring internet access",
    "smartcard: Manual smartcard tests (skipped by default)",
    "slow: Tests requiring longer timeouts",
]

[tool.coverage.run]
branch = true
source = ["requests_schannel"]

[tool.coverage.report]
fail_under = 50
show_missing = true
precision = 2

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "sspilib"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "websockets.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/requests_schannel/backends/ctypes_backend.py" = ["N801", "N806", "E501"]
"tests/**" = ["E501", "N806"]
